# prometheus

./: .gitignore  .gitmodules  Cargo.toml  EyeDeepNet.html  README.md  READme.md  SHA-1.cpp  array_pointer  array_pointer.cpp  bubble-sort.cpp  diffe_hellmay_key_exchange.cpp  dss.cpp  editor.js  ex.py  hill_cipher.go  install.sh  klipb.go  main.html  manage.html  manage.js  manifest.json  md5.cpp  merge-sort.cpp  playfair.go  predict_retinal_disease.py  pubspec.yaml  script.js  size  styles.css  tictactoe.go  vcs
AIMind/: README.md
BinRex/: README.md
BinRex/klipb/: ClipManager.sh
BinRex/svcs/: vcs.c  vcs.h
BlockIT/: background.js  blocked.html  popup.html
CPP/: c.c
CPP/LinkdList/: BasicLinked  READme.md  RecurLink.c  ll  ll.c  ll.cpp
CPPlex/: bubble  hi.asm  size.cpp  tic-tac-toe.asm
Daemons/: tpsound.c
GOLayers/: Caser.go
HalalDroid/: settings.gradle  setup.sh
HueMagic/: pix2pix.ipynb
HyperDots/: TODO
PlayGround/GOLayers/: README.md
PlayGround/SortItOut/: .gitignore  README.md
RustleMania/: README.md
SortItOut/JavaScript/: README.md
SortItOut/mcq/: package.json
SortItOut/python/: README.md
Tailora/: .gitmodules
Themes/cosmosTheme/: styles.css
WebXtend/: README.md
WebXtend/BlockIT/: manifest.json  popup.js
app/: build.gradle
autoColor/: wallpaper_color.sh
backup/: manifest.json.1
configs/: readme.md
dipuc/: README.md
execT/: exect.plugins.zsh
gls/: main.py
include/: wayland_client.hpp
klipb/: klipb.cpp  whats-this.txt
l-edger/: .gitignore  LICENSE
mcq/: package-lock.json
python/: README.md  test.py
scripts/: background.js
settings/: help.html
src/: main.cpp  main.rs  tic_tac_toe  wayland_client.cpp
styles/: styles.css
svcs/: install.sh
venus/: README.md  manifest.json
webassembly/: hi.wat  main.html
zeus/: CMakeLists.txt
zeusctl/: main.cpp
(+140 files in other folders)
